--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "repository": {
     "type": "git",
     "url": "git@workspace.konfinity.com:html-css-demo/tvastra.git"
+  },"engines": {
+    "node": "14.15.4"
   },
   "author": "",
   "license": "ISC",
