--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "css",
   "version": "1.0.0",
   "description": "## This is the wiki file to read about the tasks",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start":"app.js"
