--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "css",
   "version": "1.0.0",
   "description": "## This is the wiki file to read about the tasks",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git@workspace.konfinity.com:html-css-demo/tvastra.git"
-  },"engines": {
+  },
+  "engines": {
     "node": "14.15.4"
   },
   "author": "",
